--- a/pytorch-vs-tensorflow.ipynb
+++ b/pytorch-vs-tensorflow.ipynb
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e08f630b",
    "metadata": {},
    "outputs": [
@@ -774,26 +774,26 @@
     "import time\n",
     "\n",
     "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
-    "x_train = x_train / 255   # Fill in normalization factor\n",
-    "x_test = x_test / 255     # Fill in normalization factor\n",
+    "x_train = x_train / 255   \n",
+    "x_test = x_test / 255     \n",
     "y_train = to_categorical(y_train)\n",
     "y_test = to_categorical(y_test)\n",
     "\n",
     "model = tf.keras.Sequential([\n",
-    "    tf.keras.layers.Input(shape=(28, 28)),        # Fill input shape\n",
+    "    tf.keras.layers.Input(shape=(28, 28)),        \n",
     "    tf.keras.layers.Flatten(),\n",
-    "    tf.keras.layers.Dense(64, activation='relu'),  # Fill number of hidden neurons\n",
-    "    tf.keras.layers.Dense(10, activation='softmax')  # Fill number of output neurons\n",
+    "    tf.keras.layers.Dense(64, activation='relu'),  \n",
+    "    tf.keras.layers.Dense(10, activation='softmax')  \n",
     "])\n",
     "\n",
     "model.compile(optimizer='adam',\n",
-    "              loss='categorical_crossentropy',       # Fill name of loss function\n",
+    "              loss='categorical_crossentropy',      \n",
     "              metrics=['accuracy'])\n",
     "\n",
     "start = time.time()\n",
     "model.fit(x_train, y_train, epochs=5)\n",
     "end = time.time()\n",
-    "print(f\"TF Training time: {end-start:.2f} seconds\")       # Output training time\n",
+    "print(f\"TF Training time: {end-start:.2f} seconds\")       \n",
     "model.evaluate(x_test, y_test)"
    ]
   },
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "e99f8469",
    "metadata": {},
    "outputs": [
@@ -1698,11 +1698,11 @@
     "class Net(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Net, self).__init__()\n",
-    "        self.fc1 = nn.Linear(784, 64)    # Fill correct input and output size\n",
-    "        self.fc2 = nn.Linear(64, 10)    # Fill correct input and output size\n",
+    "        self.fc1 = nn.Linear(784, 64)    \n",
+    "        self.fc2 = nn.Linear(64, 10)    \n",
     "    def forward(self, x):\n",
-    "        x = F.relu(self.fc1(x))    # Fill correct layer\n",
-    "        return self.fc2(x)    # Fill correct layer\n",
+    "        x = F.relu(self.fc1(x))    \n",
+    "        return self.fc2(x)    \n",
     "\n",
     "model = Net()\n",
     "optimizer = optim.Adam(model.parameters())\n",
@@ -1774,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a3586699",
    "metadata": {},
    "outputs": [
@@ -1904,33 +1904,33 @@
     "from tensorflow.keras.utils import to_categorical\n",
     "import time\n",
     "\n",
-    "# Load and preprocess data\n",
+    "# Loading and preprocessing the data\n",
     "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
-    "x_train = x_train / 255   # Fill in normalization factor\n",
-    "x_test = x_test / 255   # Fill in normalization factor\n",
+    "x_train = x_train / 255   \n",
+    "x_test = x_test / 255   \n",
     "y_train = to_categorical(y_train)\n",
     "y_test = to_categorical(y_test)\n",
     "\n",
-    "# Prepare datasets\n",
-    "batch_size = 32        # Fill same batch size as in first TF example\n",
+    "# Preparing the datasets\n",
+    "batch_size = 32        \n",
     "train_dataset = tf.data.Dataset.from_tensor_slices((x_train, y_train)).shuffle(10000).batch(batch_size)\n",
     "test_dataset = tf.data.Dataset.from_tensor_slices((x_test, y_test)).batch(batch_size)\n",
     "\n",
-    "# Define model\n",
+    "# Defining the model\n",
     "model = tf.keras.Sequential([\n",
-    "    tf.keras.layers.Input(shape=(28, 28)),    # Fill size\n",
+    "    tf.keras.layers.Input(shape=(28, 28)),    \n",
     "    tf.keras.layers.Flatten(),\n",
-    "    tf.keras.layers.Dense(64, activation='relu'),    # Fill number of neurons and activation\n",
-    "    tf.keras.layers.Dense(10, activation='softmax')     # Fill number of neurons and activation\n",
+    "    tf.keras.layers.Dense(64, activation='relu'),    \n",
+    "    tf.keras.layers.Dense(10, activation='softmax')     \n",
     "])\n",
     "\n",
-    "# Define loss, optimizer, and metrics\n",
+    "# Defining loss, optimizer, and metrics functions\n",
     "loss_fn = tf.keras.losses.CategoricalCrossentropy()\n",
     "optimizer = tf.keras.optimizers.Adam()\n",
     "train_acc_metric = tf.keras.metrics.CategoricalAccuracy()\n",
     "test_acc_metric = tf.keras.metrics.CategoricalAccuracy()\n",
     "\n",
-    "# Training loop\n",
+    "# Training the loop\n",
     "epochs = 5\n",
     "start = time.time()\n",
     "for epoch in range(epochs):\n",
@@ -1951,7 +1951,7 @@
     "end = time.time()\n",
     "print(f\"\\nTF Training time: {end - start:.2f} seconds\")\n",
     "\n",
-    "# Evaluation loop\n",
+    "# Evaluating the loop\n",
     "for x_batch, y_batch in test_dataset:\n",
     "    test_logits = model(x_batch, training=False)\n",
     "    test_acc_metric.update_state(y_batch, test_logits)\n",
@@ -1961,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "65f968cb",
    "metadata": {},
    "outputs": [
@@ -2091,33 +2091,33 @@
     "from tensorflow.keras.utils import to_categorical\n",
     "import time\n",
     "\n",
-    "# Load and preprocess data\n",
+    "# Loading and preprocessing the data\n",
     "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
-    "x_train = x_train / 255  # Fill in normalization factor\n",
-    "x_test = x_test / 255   # Fill in normalization factor\n",
+    "x_train = x_train / 255  \n",
+    "x_test = x_test / 255   \n",
     "y_train = to_categorical(y_train, num_classes=10)\n",
     "y_test = to_categorical(y_test, num_classes=10)\n",
     "\n",
-    "# Prepare datasets\n",
+    "# Preparing the datasets\n",
     "batch_size = 32\n",
     "train_dataset = tf.data.Dataset.from_tensor_slices((x_train, y_train)).shuffle(10000).batch(batch_size)\n",
     "test_dataset = tf.data.Dataset.from_tensor_slices((x_test, y_test)).batch(batch_size)\n",
     "\n",
-    "# Define model\n",
+    "# Defining the model\n",
     "model = tf.keras.Sequential([\n",
-    "    tf.keras.layers.Input(shape=(28, 28)),    # Fill size\n",
+    "    tf.keras.layers.Input(shape=(28, 28)),    \n",
     "    tf.keras.layers.Flatten(),\n",
-    "    tf.keras.layers.Dense(64, activation='relu'),    # Fill number of neurons and activation\n",
-    "    tf.keras.layers.Dense(10, activation='softmax')     # Fill number of neurons and activation\n",
+    "    tf.keras.layers.Dense(64, activation='relu'),    \n",
+    "    tf.keras.layers.Dense(10, activation='softmax')     \n",
     "])\n",
     "\n",
-    "# Define loss, optimizer, and metrics\n",
+    "# Defining loss, optimizer, and metrics functions\n",
     "loss_fn = tf.keras.losses.CategoricalCrossentropy()\n",
     "optimizer = tf.keras.optimizers.Adam()\n",
     "train_acc_metric = tf.keras.metrics.CategoricalAccuracy()\n",
     "test_acc_metric = tf.keras.metrics.CategoricalAccuracy()\n",
     "\n",
-    "@tf.function  # compile the function into a graph\n",
+    "@tf.function  \n",
     "def train_step(x_batch, y_batch):\n",
     "    with tf.GradientTape() as tape:\n",
     "        logits = model(x_batch, training=True)\n",
@@ -2127,7 +2127,7 @@
     "    train_acc_metric.update_state(y_batch, logits)\n",
     "    return loss\n",
     "\n",
-    "# Training loop\n",
+    "# Training the loop\n",
     "epochs = 5\n",
     "start = time.time()\n",
     "for epoch in range(epochs):\n",
@@ -2143,7 +2143,7 @@
     "end = time.time()\n",
     "print(f\"\\nTF Training time: {end - start:.2f} seconds\")\n",
     "\n",
-    "# Evaluation loop\n",
+    "# Evaluating the loop\n",
     "for x_batch, y_batch in test_dataset:\n",
     "    test_logits = model(x_batch, training=False)\n",
     "    test_acc_metric.update_state(y_batch, test_logits)\n",
